--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,28 +1,24 @@
-// Misc.
 	$misc: (
 		z-index-base:		10000,
 		max-features:		20,
 		max-sidebar-links:	20
 	);
 
-// Duration.
 	$duration: (
 		transition:			0.2s,
 		activation:			1s
 	);
 
-// Size.
 	$size: (
 		border-radius:		0.25em,
 		border-width:		1px,
 		element-height:		2.75em,
 		element-margin:		2em,
 		sidebar-width:		18em,
-		sidebar-height:		3.5em,	// when <=large is active
+		sidebar-height:		3.5em,
 		inner-width:		75em
 	);
 
-// Font.
 	$font: (
 		family:				(Arial, Helvetica, sans-serif),
 		family-fixed:		('Courier New', monospace),
@@ -31,7 +27,6 @@
 		kerning-alt:		0.25em
 	);
 
-// Palette.
 	$palette: (
 		bg:					#312450,
 		bg-alt:				darken(#312450, 5),
